<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.scijava</groupId>
        <artifactId>pom-scijava</artifactId>
        <version>44.0.0</version>
        <relativePath />
    </parent>

    <groupId>org.bonej</groupId>
    <artifactId>pom-bonej</artifactId>
    <version>7.2.2-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>BoneJ Parent POM</name>
    <description>Parent POM for BoneJ components</description>
    <url>https://imagej.github.io/plugins/bonej</url>
    <inceptionYear>2016</inceptionYear>
    <organization>
        <name>Royal Veterinary College</name>
        <url>https://www.rvc.ac.uk/</url>
    </organization>
    <licenses>
        <license>
            <name>Simplified BSD License</name>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>mdoube</id>
            <name>Michael Doube</name>
            <email>mdoube@cityu.edu.hk</email>
            <url>https://scholars.cityu.edu.hk/en/persons/michael-doube(e2acdf24-d9b3-4a48-a05d-ffcd72e7b758).html</url>
            <organization>City University of Hong Kong</organization>
            <organizationUrl>https://www.cityu.edu.hk/</organizationUrl>
            <roles>
                <role>founder</role>
                <role>lead</role>
                <role>developer</role>
                <role>debugger</role>
                <role>reviewer</role>
                <role>support</role>
                <role>maintainer</role>
            </roles>
            <timezone>+8</timezone>
        </developer>
        <developer>
            <id>alessandrofelder</id>
            <name>Alessandro Felder</name>
            <email>afelder@rvc.ac.uk</email>
            <organization>Royal Veterinary College</organization>
            <organizationUrl>https://www.rvc.ac.uk/</organizationUrl>
            <roles>
                <role>developer</role>
                <role>debugger</role>
                <role>reviewer</role>
                <role>support</role>
                <role>maintainer</role>
            </roles>
            <timezone>+0</timezone>
        </developer>
    </developers>
    <contributors>
        <contributor>
            <name>Richard Domander</name>
            <url>https://imagej.github.io/users/rimadoma</url>
            <properties><id>rimadoma</id></properties>
            <roles><role>founder</role></roles>
        </contributor>
        <contributor>
            <name>Curtis Rueden</name>
            <url>https://imagej.github.io/users/ctrueden</url>
            <properties><id>ctrueden</id></properties>
        </contributor>
        <contributor>
            <name>Mark Hiner</name>
            <url>https://imagej.github.io/users/hinerm</url>
            <properties><id>hinerm</id></properties>
        </contributor>
    </contributors>

    <mailingLists>
        <mailingList>
            <name>Image.sc Forum</name>
            <subscribe>https://forum.image.sc/tag/bonej</subscribe>
            <post>https://forum.image.sc/tag/bonej</post>
        </mailingList>
    </mailingLists>

    <modules>
        <module>Legacy/bonej</module>
        <module>Legacy/util</module>
        <module>Modern/ops</module>
        <module>Modern/utilities</module>
        <module>Modern/wrapperPlugins</module>
    </modules>

    <scm>
        <connection>scm:git:https://github.com/bonej-org/BoneJ2</connection>
        <developerConnection>scm:git:git@github.com:bonej-org/BoneJ2</developerConnection>
        <tag>HEAD</tag>
        <url>https://github.com/bonej-org/BoneJ2</url>
    </scm>
    <issueManagement>
        <system>GitHub Issues</system>
        <url>https://github.com/bonej-org/BoneJ2/issues</url>
    </issueManagement>
    <ciManagement>
        <system>GitHub Actions</system>
        <url>https://github.com/bonej-org/BoneJ2/actions</url>
    </ciManagement>

    <properties>
        <license.licenseName>bsd_2</license.licenseName>
        <license.copyrightOwners>Michael Doube, BoneJ developers</license.copyrightOwners>
        <releaseProfiles>sign,deploy-to-scijava</releaseProfiles>
        <tagNameFormat>bonej-@{project.version}</tagNameFormat>
        <!-- SciJava is enforcing Java 11 -->
        <maven.compiler.release>11</maven.compiler.release>
    </properties>
    
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.14.0</version>
                    <configuration>
                        <release>${maven.compiler.release}</release>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <repositories>
        <repository>
            <id>scijava.public</id>
            <url>https://maven.scijava.org/content/groups/public</url>
            <releases><enabled>true</enabled></releases>
            <snapshots><enabled>false</enabled></snapshots>
        </repository>
    </repositories>
</project>